--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,14 +1,2 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        {{ .Style }}
-        <title>{{ .Title}}</title>
-    </head>
-    <body>
-        <h1>{{ .Title }}</h1>
-        <p>{{ .Ok }}</p>
-    </body>
-    {{ template "footer" }}
-
-</html>
+<h1>Status:</h1>
+<p>{{ .Ok }}</p>
